Fix the scrolling of summary tables so the table doesn't overflow the bottom of the summary table's component container.
Included placing the table inside its own div element, then allowing auto scroll within the div element. This keeps the outer-most container available for resize, selection, etc. (the outer-most container didn't work very well with scrolling).

--- a/webui/dashboard/components/summaryTable/summaryTable.css
+++ b/webui/dashboard/components/summaryTable/summaryTable.css
@@ -5,6 +5,12 @@
 	height: auto;
 }
 
+.dashboardSummaryTableComponent .tableContainer {
+	width:100%;
+	height:100%;
+	overflow:auto;
+}
+
 .dashboardSummaryTableComponent table {
 	margin-bottom: 0px;
 }
